--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,6 +3,8 @@ body {
   font-family: -apple-system, Helvetica Neue, Helvetica, Roboto, Droid Sans, Arial, sans-serif;
   font-weight: 400;
   font-size: .875rem;
+  color: rgba(0, 0, 0, .87);
+  background: #efefef;
 }
 
 .product-price {
