--- a/src/styles/layout/_top-header.scss
+++ b/src/styles/layout/_top-header.scss
@@ -1,3 +1,4 @@
+/* For mobile phones: */
 .top-header {
     background-color: #f7f8f9;
     position: relative;
@@ -7,4 +8,12 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+}
+
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
 }
