--- a/src/styles/layout/_menu.scss
+++ b/src/styles/layout/_menu.scss
@@ -5,6 +5,7 @@
     z-index: 999;
     width: 100%;
     justify-content: space-between;
+    align-items: center;
 }
 
 .menu-item {
@@ -21,6 +22,12 @@
 
 .search-input {
     width: 100%;
+    height: 2.25rem;
+    background: #fff;
+    border-radius: 0.125rem;
+    display: flex;
+    align-items: center;
+    padding: 0 0.5rem;
 }
 
 .below-header {
