--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -17,3 +17,13 @@
     box-shadow: none;
     transition: none;
 }
+
+.carousel .slide img {
+    height: 100%;
+    object-fit: cover;
+    object-position: bottom;
+}
+
+.carousel .slider-wrapper.axis-horizontal .slider {
+    height: 100%;
+}
