--- a/src/styles/layout/_menu.scss
+++ b/src/styles/layout/_menu.scss
@@ -6,6 +6,9 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
+    margin: 2.75rem auto 0;
+    max-width: 37.5rem;
+    margin-top: 0;
 }
 
 .menu-item {
