--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 
 // Components
 @import "components/carousel";
+@import "components/horizontal-categories";
 
 // Tailwindcss
 @import "~tailwindcss/base";
