--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,9 +7,7 @@ body {
   background: #efefef;
 }
 
-*,
-::before,
-::after {
+#__next {
   margin: 2.75rem auto 0;
   max-width: 37.5rem;
   margin-top: 0;
