--- a/src/styles/components/_horizontal-categories.scss
+++ b/src/styles/components/_horizontal-categories.scss
@@ -1,4 +1,34 @@
 .horizontal-categories {
+
+    /* width */
+    ::-webkit-scrollbar {
+        height: 0.25rem;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        width: 50px;
+        background: #efefef;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        width: 10px;
+        background: #00a4f7;
+    }
+
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #00a4f7;
+    }
+
+    .react-horizontal-scrolling-menu--scroll-container {
+        height: 195px;
+        padding-top: 15px;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+
     .category-name {
         display: -webkit-box;
         text-overflow: ellipsis;
@@ -14,7 +44,7 @@
     }
 
     .react-horizontal-scrolling-menu--item {
-        height: 6rem;
+        height: 5.5rem;
         min-width: 22.22222%;
         text-align: center;
     }
