Styling horizontal categories

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,9 @@
 // Abstracts
 @import "abstracts/variables";
 
+// Pages
+@import "pages/homepage";
+
 // Layout
 @import "layout/top-header";
 @import "layout/menu";
