--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,7 +8,7 @@ body {
 }
 
 #__next {
-  background-color: white;
+  // background-color: white;
   margin: 2.75rem auto 0;
   max-width: 37.5rem;
   margin-top: 0;
