--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,6 +14,10 @@ body {
   margin-top: 0;
 }
 
+.content {
+  background-color: white;
+}
+
 .product-price {
   font-family: -apple-system, HelveticaNeueMedium, HelveticaNeue-Medium, Helvetica Neue Medium, Helvetica Neue, Roboto, Droid Sans, Arial Bold, Arial, sans-serif;
   font-weight: 500;
