--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,10 +8,10 @@ body {
 }
 
 #__next {
-  // background-color: white;
   margin: 2.75rem auto 0;
   max-width: 37.5rem;
   margin-top: 0;
+  margin-bottom: 60px;
 }
 
 .content {
