--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 // Layout
 @import "layout/top-header";
 @import "layout/menu";
+@import "layout/bottom-menu";
 
 // Components
 @import "components/carousel";
