--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 @import "layout/top-header";
 @import "layout/menu";
 @import "layout/bottom-menu";
+@import "layout/sub-menu";
 
 // Components
 @import "components/carousel";
