--- a/src/styles/layout/_bottom-menu.scss
+++ b/src/styles/layout/_bottom-menu.scss
@@ -1,14 +1,23 @@
-.bottom-navigation {
+#bottom-navigation {
     position: fixed;
     right: 0;
     left: 0;
     z-index: 10;
     bottom: 0;
 
+    svg {
+        display: inline-block;
+    }
+
     a {
         text-align: center;
         padding-top: 0.5rem;
         padding-bottom: 0.25rem;
         justify-content: center;
+    }
+
+    .title {
+        font-size: 0.55rem;
+        padding-top: 2px;
     }
 }
