--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,7 @@
 
 // Components
 @import "components/carousel";
+@import "components/nprogress";
 @import "components/horizontal-categories";
 
 // Tailwindcss
