--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 @import "layout/sub-menu";
 
 // Components
+@import "components/product";
 @import "components/carousel";
 @import "components/nprogress";
 @import "components/horizontal-categories";
