--- a/src/styles/layout/_product-menu.scss
+++ b/src/styles/layout/_product-menu.scss
@@ -1,4 +1,31 @@
 .product-menu {
+    padding: 10px 15px;
+    position: absolute;
+    top: 0;
+    z-index: 999;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    margin: 2.75rem auto 0;
+    max-width: 37.5rem;
+    margin-top: 0;
+
+    .cart-badges {
+        position: absolute;
+        height: 18px;
+        min-width: 19px;
+        left: 228px;
+        top: 7px;
+        background: rgb(0, 164, 247);
+        color: #fff;
+        font-size: 10px;
+        line-height: 12px;
+        padding: 2px;
+        border-radius: 9px;
+        border: 1px solid #fff;
+        text-align: center;
+    }
+
     .item-container {
         flex-shrink: 0;
         display: flex;
@@ -16,11 +43,18 @@
             -webkit-user-select: none;
             -moz-user-select: none;
             user-select: none;
-            width: 1.375rem;
+            // width: 1.375rem;
             fill: white;
             overflow: hidden;
             stroke: currentColor;
-            height: 1em;
+            // height: 1em;
         }
+    }
+
+    .bg-icon {
+        display: table-cell;
+        background: rgba(0, 0, 0, 0.26);
+        border-radius: 50%;
+        padding: 7px;
     }
 }
