--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,6 +7,11 @@ body {
   background: #efefef;
 }
 
+.sub-page {
+  margin-top: 3rem;
+  width: 100%;
+}
+
 #__next {
   margin: 2.75rem auto 0;
   max-width: 37.5rem;
