--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 @import "layout/bottom-menu";
 @import "layout/product-menu";
 @import "layout/sub-menu";
+@import "layout/cart-bottom-menu";
 
 // Components
 @import "components/product";
