--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,6 +7,10 @@ body {
   background: #efefef;
 }
 
+.color-primary {
+  color: #00a4f7;
+}
+
 .sub-page {
   margin-top: 3rem;
   width: 100%;
@@ -16,7 +20,7 @@ body {
   margin: 2.75rem auto 0;
   max-width: 37.5rem;
   margin-top: 0;
-  margin-bottom: 60px;
+  margin-bottom: 90px;
 }
 
 .content {
