--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,8 @@
 @import "layout/cart-bottom-menu";
 
 // Components
+@import "components/language-switcher";
+@import "components/modal";
 @import "components/product";
 @import "components/carousel";
 @import "components/nprogress";
