--- a/src/styles/layout/_menu.scss
+++ b/src/styles/layout/_menu.scss
@@ -1,6 +1,6 @@
 .menu {
-    padding: 10px 25px;
-    position: absolute;
+    padding: 10px 15px;
+    position: fixed;
     top: 0;
     z-index: 999;
     width: 100%;
