--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,7 @@
 @import "components/carousel";
 @import "components/nprogress";
 @import "components/horizontal-categories";
+@import "components/app-modal";
 
 // Tailwindcss
 @import "~tailwindcss/base";
