Change color primary

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,6 +7,10 @@ body {
   background: #efefef;
 }
 
+.bg-primary {
+  background-color: rgb(14 128 197);
+}
+
 .color-primary {
   color: #00a4f7;
 }
