--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,7 +8,7 @@ body {
 }
 
 .bg-primary {
-  background-color: rgb(14 128 197);
+  background-color: rgba(14, 128, 197, 0.9);
 }
 
 .color-primary {
