--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,9 +24,9 @@
 @import "components/app-modal";
 
 // Tailwindcss
-@import "~tailwindcss/base";
-@import "~tailwindcss/components";
-@import "~tailwindcss/utilities";
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 // NProgress
 @import "nprogress/nprogress.css";
