--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,5 @@
 body {
+  word-wrap: break-word;
   width: 100%;
   font-family: -apple-system, Helvetica Neue, Helvetica, Roboto, Droid Sans, Arial, sans-serif;
   font-weight: 400;
