--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,12 +8,20 @@ body {
   background: #efefef;
 }
 
+hr {
+  border-bottom: 1px solid rgba(0,0,0,.09) !important;
+}
+
 *:focus {
   outline: none;
 }
 
 .btn {
   border-radius: 2px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .bg-primary {
@@ -157,7 +165,7 @@ body {
   }
 
   tr {
-    border-bottom: 1px solid #ccc;
+    // border-bottom: 1px solid #ccc;
   }
 }
 
