--- a/src/styles/layout/_product-menu.scss
+++ b/src/styles/layout/_product-menu.scss
@@ -1,6 +1,6 @@
 .product-menu {
     padding: 10px 15px;
-    position: absolute;
+    position: fixed;
     top: 0;
     z-index: 999;
     width: 100%;
