--- a/src/styles/components/_product.scss
+++ b/src/styles/components/_product.scss
@@ -36,7 +36,7 @@
         }
 
         .product-price {
-            font-size: 1rem;
+            font-size: 14px;
             color: #00a4f7;
             overflow: hidden;
             text-overflow: ellipsis;
