--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -5,9 +5,9 @@
     .title {
         font-family: -apple-system, HelveticaNeueMedium, HelveticaNeue-Medium, Helvetica Neue Medium, Helvetica Neue, Roboto, Droid Sans, Arial Bold, Arial, sans-serif;
         font-weight: 500;
-        font-size: 1rem;
+        font-size: 14px;
         color: #00a4f7;
-        width: 60%;
+        width: 50%;
     }
 
     .action-link {
@@ -17,7 +17,7 @@
         font-family: -apple-system, HelveticaNeue-Light, Helvetica Neue Light, Helvetica Neue, Helvetica, Roboto, Droid Sans, Arial, sans-serif;
         font-weight: 300;
         font-size: .75rem;
-        width: 40%;
+        width: 50%;
         text-align: right;
 
         .icon {
