--- a/src/styles/components/_horizontal-categories.scss
+++ b/src/styles/components/_horizontal-categories.scss
@@ -24,13 +24,14 @@
     }
 
     .react-horizontal-scrolling-menu--scroll-container {
-        height: 225px;
+        height: 100%;
         padding-top: 10px;
         flex-wrap: wrap;
         flex-direction: column;
     }
 
     .category-name {
+        margin-top: 5px !important;
         width: 85px;
         margin: 0 auto;
         display: -webkit-box;
@@ -38,7 +39,7 @@
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 2;
         max-height: 2.625rem;
-        font-size: 14px;
+        font-size: 13px;
         line-height: 1.2rem;
         color: rgba(0, 0, 0, .87);
         word-wrap: break-word;
@@ -57,7 +58,7 @@
         vertical-align: bottom;
         display: inline-block;
         height: auto;
-        width: 100px;
+        width: 50px;
         opacity: 1;
         transition: opacity .2s ease;
     }
