--- a/src/styles/layout/_menu.scss
+++ b/src/styles/layout/_menu.scss
@@ -2,12 +2,14 @@
     padding: 5px 10px;
     position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
     z-index: 999;
     width: 100%;
     justify-content: space-between;
     align-items: center;
     margin: 2.75rem auto 0;
-    max-width: 37.5rem;
+    max-width: 50rem;
     margin-top: 0;
 
     .cart-badges {
