--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -47,8 +47,8 @@ svg {
 // }
 
 #__next {
-  margin: 2.75rem auto 0;
-  max-width: 37.5rem;
+  // margin: 2.75rem auto 0;
+  // max-width: 37.5rem;
   margin-top: 0;
 }
 
