--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import "pages/cart";
 
 // Layout
+@import "layout/top-info";
 @import "layout/top-header";
 @import "layout/menu";
 @import "layout/bottom-menu";
