--- a/src/styles/components/_product.scss
+++ b/src/styles/components/_product.scss
@@ -1,5 +1,13 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .brand-name {
     font-size: 11px;
+}
+
+.selected-attribute {
+    @apply bg-primary text-white
 }
 
 .product {
